--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,9 +74,11 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
       TZ: 'Europe/Rome'
+      DOCKER_HOST: unix:///var/run/docker.sock
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
       - /var/run/docker.sock:/var/run/docker.sock
       - ./requirements.txt:/requirements.txt  # Ensure this path is correct
     ports:
@@ -91,9 +93,12 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       TZ: 'Europe/Rome'
+      DOCKER_HOST: unix:///var/run/docker.sock
+
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
       - /var/run/docker.sock:/var/run/docker.sock
       - ./requirements.txt:/requirements.txt
     depends_on:
@@ -106,6 +111,8 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       TZ: 'Europe/Rome'
+      DOCKER_HOST: unix:///var/run/docker.sock
+
     volumes:
       - ./requirements.txt:/requirements.txt
     depends_on:
